2010-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: Allocate ‘REPO (r)’ also for new repo.

	Omission from 2010-05-24, "Rewrite parsing".
	* b-grok.c (empty_repo): New func.
	(full): Use ‘empty_repo’.
	* b-grok.h (empty_repo): New func decl.
	* rcsfnms.c (InitAdmin): Use ‘empty_repo’.
	* ci.c (addelta): No longer check for NULL ‘REPO (r)’.
	* rcsgen.c (format_assocs): Likewise.
	* rcsmerge.c (main): Likewise.
	* rcs.c (main): Likewise.  Also, use ‘GROK (desc)’ directly.
	Reported by Nelson H. F. Beebe.

2010-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Include program name in autogenerated tmpfile name.

	* b-feph.c (struct ephemstuff):
	Drop member ‘tmpdir’; add member ‘standard’.
	(jam_sff): Include ‘PROGRAM (name)’ in ‘EPH (standard)’.

2010-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Presume availability of ‘strsignal’.

	* b-isr.c: Don't #include "sig2str.h".
	(complain_signal) [!HAVE_STRSIGNAL]: Delete
	code and surrounding preprocessor conditional.

2010-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Presume availability of ‘sigaction’.

	* b-isr.c (scratch_from_context) [!HAVE_SIGACTION]: Delete code.
	(catchsigaction): Don't reset the handler.
	[!HAVE_SIGACTION] (catchsig): Delete func.
	(setup_catchsig) [!HAVE_SIGACTION]: Delete code.
	[!HAVE_SIGACTION] (ISR_STACK_SIZE): Delete code,
	leaving unconditionally #define:d ‘ISR_STACK_SIZE’.

2010-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘getlogin_r’, not ‘getlogin’.

	* b-excwho.c (getusername): Use ‘getlogin_r’ instead
	of ‘getlogin’; share local ‘buf’ with ‘getpwuid_r’.
	* base.h (getlogin_is_secure): Delete #define.

2010-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘getpwuid_r’, not ‘getpwuid’.

	* b-excwho.c (getusername) [HAVE_GETUID && HAVE_GETPWUID]:
	Delete code; move #else code to...
	[!HAVE_GETPWUID_R]: ...here.
	[HAVE_GETPWUID_R]: Use ‘getpwuid_r’ to find user name.

2010-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>
