@@ -20,6 +20,7 @@
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
 
+extern int change_mode (int fd, mode_t mode);
 extern void Ierror (void) exiting;
 extern void testIerror (FILE *f);
 extern void Oerror (void) exiting;
